[gd_scene load_steps=4 format=3 uid="uid://cvsj8b31gxwxf"]

[ext_resource type="Script" uid="uid://cu61o7h1jwwy5" path="res://maptree/ui/relic_ui.gd" id="1_0n7ii"]
[ext_resource type="Texture2D" uid="uid://dkxjpqlq0n1pn" path="res://maptree/TestButtons/Big_Protection_Potion.png" id="1_wthql"]
[ext_resource type="Resource" uid="uid://cxoun3rdt4fmr" path="res://maptree/shop/relics/health_potion_big.tres" id="2_5ckj3"]

[node name="RelicUI" type="Button"]
custom_minimum_size = Vector2(80, 80)
offset_right = 80.0
offset_bottom = 80.0
script = ExtResource("1_0n7ii")
relic = ExtResource("2_5ckj3")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(80, 80)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RelicIcon" type="TextureRect" parent="Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
size_flags_vertical = 4
texture = ExtResource("1_wthql")
expand_mode = 5
stretch_mode = 5

[node name="RelicAmount" type="Label" parent="Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 14
text = "22"
vertical_alignment = 2
clip_text = true
